LAParser.py
# Generated from LA.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LAParser ( Parser ):

    grammarFileName = "LA.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'algoritmo'", "'fim_algoritmo'", "'declare'", 
                     "'constante'", "':'", "'='", "'tipo'", "','", "'.'", 
                     "'['", "']'", "'registro'", "'fim_registro'", "'^'", 
                     "'literal'", "'inteiro'", "'real'", "'logico'", "'verdadeiro'", 
                     "'falso'", "'procedimento'", "'('", "')'", "'fim_procedimento'", 
                     "'funcao'", "'fim_funcao'", "'var'", "'leia'", "'escreva'", 
                     "'se'", "'entao'", "'senao'", "'fim_se'", "'caso'", 
                     "'seja'", "'fim_caso'", "'para'", "'<-'", "'ate'", 
                     "'faca'", "'fim_para'", "'enquanto'", "'fim_enquanto'", 
                     "'retorne'", "'..'", "'-'", "'+'", "'*'", "'/'", "'%'", 
                     "'&'", "'<>'", "'>='", "'<='", "'>'", "'<'", "'nao'", 
                     "'ou'", "'e'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "CADEIA", "COMENTARIO", "NUM_INT", "NUM_REAL", "IDENT", 
                      "WS" ]

    RULE_programa = 0
    RULE_declaracoes = 1
    RULE_declaracao_local = 2
    RULE_variavel = 3
    RULE_identificador = 4
    RULE_dimensao = 5
    RULE_tipo = 6
    RULE_registro = 7
    RULE_tipo_estendido = 8
    RULE_tipo_basico_ident = 9
    RULE_tipo_basico = 10
    RULE_valor_constante = 11
    RULE_declaracao_global = 12
    RULE_parametro = 13
    RULE_parametros = 14
    RULE_corpo = 15
    RULE_cmd = 16
    RULE_cmdLeia = 17
    RULE_cmdEscreva = 18
    RULE_cmdSe = 19
    RULE_cmdCaso = 20
    RULE_cmdPara = 21
    RULE_cmdEnquanto = 22
    RULE_cmdFaca = 23
    RULE_cmdAtribuicao = 24
    RULE_cmdChamada = 25
    RULE_cmdRetorne = 26
    RULE_selecao = 27
    RULE_item_selecao = 28
    RULE_constantes = 29
    RULE_numero_intervalo = 30
    RULE_op_unario = 31
    RULE_exp_aritmetica = 32
    RULE_termo = 33
    RULE_fator = 34
    RULE_op1 = 35
    RULE_op2 = 36
    RULE_op3 = 37
    RULE_parcela = 38
    RULE_parcela_unario = 39
    RULE_parcela_nao_unario = 40
    RULE_exp_relacional = 41
    RULE_op_relacional = 42
    RULE_expressao = 43
    RULE_termo_logico = 44
    RULE_fator_logico = 45
    RULE_parcela_logica = 46
    RULE_op_logico_1 = 47
    RULE_op_logico_2 = 48

    ruleNames =  [ "programa", "declaracoes", "declaracao_local", "variavel", 
                   "identificador", "dimensao", "tipo", "registro", "tipo_estendido", 
                   "tipo_basico_ident", "tipo_basico", "valor_constante", 
                   "declaracao_global", "parametro", "parametros", "corpo", 
                   "cmd", "cmdLeia", "cmdEscreva", "cmdSe", "cmdCaso", "cmdPara", 
                   "cmdEnquanto", "cmdFaca", "cmdAtribuicao", "cmdChamada", 
                   "cmdRetorne", "selecao", "item_selecao", "constantes", 
                   "numero_intervalo", "op_unario", "exp_aritmetica", "termo", 
                   "fator", "op1", "op2", "op3", "parcela", "parcela_unario", 
                   "parcela_nao_unario", "exp_relacional", "op_relacional", 
                   "expressao", "termo_logico", "fator_logico", "parcela_logica", 
                   "op_logico_1", "op_logico_2" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    CADEIA=60
    COMENTARIO=61
    NUM_INT=62
    NUM_REAL=63
    IDENT=64
    WS=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracoes(self):
            return self.getTypedRuleContext(LAParser.DeclaracoesContext,0)


        def corpo(self):
            return self.getTypedRuleContext(LAParser.CorpoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = LAParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.declaracoes()
            self.state = 99
            self.match(LAParser.T__0)
            self.state = 100
            self.corpo()
            self.state = 101
            self.match(LAParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao_local(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.Declaracao_localContext)
            else:
                return self.getTypedRuleContext(LAParser.Declaracao_localContext,i)


        def declaracao_global(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.Declaracao_globalContext)
            else:
                return self.getTypedRuleContext(LAParser.Declaracao_globalContext,i)


        def getRuleIndex(self):
            return LAParser.RULE_declaracoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracoes" ):
                listener.enterDeclaracoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracoes" ):
                listener.exitDeclaracoes(self)




    def declaracoes(self):

        localctx = LAParser.DeclaracoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LAParser.T__2) | (1 << LAParser.T__3) | (1 << LAParser.T__6) | (1 << LAParser.T__20) | (1 << LAParser.T__24))) != 0):
                self.state = 105
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [LAParser.T__2, LAParser.T__3, LAParser.T__6]:
                    self.state = 103
                    self.declaracao_local()
                    pass
                elif token in [LAParser.T__20, LAParser.T__24]:
                    self.state = 104
                    self.declaracao_global()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_localContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variavel(self):
            return self.getTypedRuleContext(LAParser.VariavelContext,0)


        def IDENT(self):
            return self.getToken(LAParser.IDENT, 0)

        def tipo_basico(self):
            return self.getTypedRuleContext(LAParser.Tipo_basicoContext,0)


        def valor_constante(self):
            return self.getTypedRuleContext(LAParser.Valor_constanteContext,0)


        def tipo(self):
            return self.getTypedRuleContext(LAParser.TipoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_declaracao_local

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_local" ):
                listener.enterDeclaracao_local(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_local" ):
                listener.exitDeclaracao_local(self)




    def declaracao_local(self):

        localctx = LAParser.Declaracao_localContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracao_local)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LAParser.T__2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(LAParser.T__2)
                self.state = 111
                self.variavel()
                pass
            elif token in [LAParser.T__3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(LAParser.T__3)
                self.state = 113
                self.match(LAParser.IDENT)
                self.state = 114
                self.match(LAParser.T__4)
                self.state = 115
                self.tipo_basico()
                self.state = 116
                self.match(LAParser.T__5)
                self.state = 117
                self.valor_constante()
                pass
            elif token in [LAParser.T__6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.match(LAParser.T__6)
                self.state = 120
                self.match(LAParser.IDENT)
                self.state = 121
                self.match(LAParser.T__4)
                self.state = 122
                self.tipo()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariavelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.IdentificadorContext)
            else:
                return self.getTypedRuleContext(LAParser.IdentificadorContext,i)


        def tipo(self):
            return self.getTypedRuleContext(LAParser.TipoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_variavel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariavel" ):
                listener.enterVariavel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariavel" ):
                listener.exitVariavel(self)




    def variavel(self):

        localctx = LAParser.VariavelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variavel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.identificador()
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LAParser.T__7:
                self.state = 126
                self.match(LAParser.T__7)
                self.state = 127
                self.identificador()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 133
            self.match(LAParser.T__4)
            self.state = 134
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentificadorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self, i:int=None):
            if i is None:
                return self.getTokens(LAParser.IDENT)
            else:
                return self.getToken(LAParser.IDENT, i)

        def dimensao(self):
            return self.getTypedRuleContext(LAParser.DimensaoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_identificador

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentificador" ):
                listener.enterIdentificador(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentificador" ):
                listener.exitIdentificador(self)




    def identificador(self):

        localctx = LAParser.IdentificadorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_identificador)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(LAParser.IDENT)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LAParser.T__8:
                self.state = 137
                self.match(LAParser.T__8)
                self.state = 138
                self.match(LAParser.IDENT)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 144
            self.dimensao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_aritmetica(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.Exp_aritmeticaContext)
            else:
                return self.getTypedRuleContext(LAParser.Exp_aritmeticaContext,i)


        def getRuleIndex(self):
            return LAParser.RULE_dimensao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDimensao" ):
                listener.enterDimensao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDimensao" ):
                listener.exitDimensao(self)




    def dimensao(self):

        localctx = LAParser.DimensaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dimensao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LAParser.T__9:
                self.state = 146
                self.match(LAParser.T__9)
                self.state = 147
                self.exp_aritmetica()
                self.state = 148
                self.match(LAParser.T__10)
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def registro(self):
            return self.getTypedRuleContext(LAParser.RegistroContext,0)


        def tipo_estendido(self):
            return self.getTypedRuleContext(LAParser.Tipo_estendidoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = LAParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tipo)
        try:
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LAParser.T__11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 155
                self.registro()
                pass
            elif token in [LAParser.T__13, LAParser.T__14, LAParser.T__15, LAParser.T__16, LAParser.T__17, LAParser.IDENT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.tipo_estendido()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegistroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variavel(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.VariavelContext)
            else:
                return self.getTypedRuleContext(LAParser.VariavelContext,i)


        def getRuleIndex(self):
            return LAParser.RULE_registro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegistro" ):
                listener.enterRegistro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegistro" ):
                listener.exitRegistro(self)




    def registro(self):

        localctx = LAParser.RegistroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_registro)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(LAParser.T__11)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LAParser.IDENT:
                self.state = 160
                self.variavel()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 166
            self.match(LAParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_estendidoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_basico_ident(self):
            return self.getTypedRuleContext(LAParser.Tipo_basico_identContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_tipo_estendido

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_estendido" ):
                listener.enterTipo_estendido(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_estendido" ):
                listener.exitTipo_estendido(self)




    def tipo_estendido(self):

        localctx = LAParser.Tipo_estendidoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_tipo_estendido)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LAParser.T__13:
                self.state = 168
                self.match(LAParser.T__13)


            self.state = 171
            self.tipo_basico_ident()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_basico_identContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo_basico(self):
            return self.getTypedRuleContext(LAParser.Tipo_basicoContext,0)


        def IDENT(self):
            return self.getToken(LAParser.IDENT, 0)

        def getRuleIndex(self):
            return LAParser.RULE_tipo_basico_ident

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_basico_ident" ):
                listener.enterTipo_basico_ident(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_basico_ident" ):
                listener.exitTipo_basico_ident(self)




    def tipo_basico_ident(self):

        localctx = LAParser.Tipo_basico_identContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tipo_basico_ident)
        try:
            self.state = 175
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LAParser.T__14, LAParser.T__15, LAParser.T__16, LAParser.T__17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.tipo_basico()
                pass
            elif token in [LAParser.IDENT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.match(LAParser.IDENT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Tipo_basicoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LAParser.RULE_tipo_basico

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo_basico" ):
                listener.enterTipo_basico(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo_basico" ):
                listener.exitTipo_basico(self)




    def tipo_basico(self):

        localctx = LAParser.Tipo_basicoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tipo_basico)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LAParser.T__14) | (1 << LAParser.T__15) | (1 << LAParser.T__16) | (1 << LAParser.T__17))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Valor_constanteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CADEIA(self):
            return self.getToken(LAParser.CADEIA, 0)

        def NUM_INT(self):
            return self.getToken(LAParser.NUM_INT, 0)

        def NUM_REAL(self):
            return self.getToken(LAParser.NUM_REAL, 0)

        def getRuleIndex(self):
            return LAParser.RULE_valor_constante

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValor_constante" ):
                listener.enterValor_constante(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValor_constante" ):
                listener.exitValor_constante(self)




    def valor_constante(self):

        localctx = LAParser.Valor_constanteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_valor_constante)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LAParser.T__18) | (1 << LAParser.T__19) | (1 << LAParser.CADEIA) | (1 << LAParser.NUM_INT) | (1 << LAParser.NUM_REAL))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracao_globalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(LAParser.IDENT, 0)

        def corpo(self):
            return self.getTypedRuleContext(LAParser.CorpoContext,0)


        def parametros(self):
            return self.getTypedRuleContext(LAParser.ParametrosContext,0)


        def tipo_estendido(self):
            return self.getTypedRuleContext(LAParser.Tipo_estendidoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_declaracao_global

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_global" ):
                listener.enterDeclaracao_global(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_global" ):
                listener.exitDeclaracao_global(self)




    def declaracao_global(self):

        localctx = LAParser.Declaracao_globalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_declaracao_global)
        self._la = 0 # Token type
        try:
            self.state = 203
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LAParser.T__20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 181
                self.match(LAParser.T__20)
                self.state = 182
                self.match(LAParser.IDENT)
                self.state = 183
                self.match(LAParser.T__21)
                self.state = 185
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==LAParser.T__26 or _la==LAParser.IDENT:
                    self.state = 184
                    self.parametros()


                self.state = 187
                self.match(LAParser.T__22)
                self.state = 188
                self.corpo()
                self.state = 189
                self.match(LAParser.T__23)
                pass
            elif token in [LAParser.T__24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 191
                self.match(LAParser.T__24)
                self.state = 192
                self.match(LAParser.IDENT)
                self.state = 193
                self.match(LAParser.T__21)
                self.state = 195
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==LAParser.T__26 or _la==LAParser.IDENT:
                    self.state = 194
                    self.parametros()


                self.state = 197
                self.match(LAParser.T__22)
                self.state = 198
                self.match(LAParser.T__4)
                self.state = 199
                self.tipo_estendido()
                self.state = 200
                self.corpo()
                self.state = 201
                self.match(LAParser.T__25)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identificador(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LAParser.IdentificadorContext)
            else:
                return self.getTypedRuleContext(LAParser.IdentificadorContext,i)


        def tipo_estendido(self):
            return self.getTypedRuleContext(LAParser.Tipo_estendidoContext,0)


        def getRuleIndex(self):
            return LAParser.RULE_parametro
